--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Download</title>
+<title>Ready Download</title>
   <meta charset="utf-8">
 <!--
 APP BY MC 113 | REMAKE FARHANJS
@@ -13,7 +13,7 @@ APP BY MC 113 | REMAKE FARHANJS
         </audio>
 </script>
 
-<script>alert ('KAMU MASUK TANPA AKUN')</script>
+<script>alert ('Hallo guest')</script>
 <script language="JavaScript"> 
  
 function tb5_makeArray(n){
@@ -127,7 +127,7 @@ h2{
 <br><br>
 <marquee><font color="red">Download beta Game Doodle army Sad story</font></marquee>
 <div class="animasi-teks"><font color="red">DOODLE ARMY APK</div></font>
-<br><a href="https://api.whatsapp.com/send?phone=6281247374916&text=#DownloadPack89"><input type="button" value="DOWNLOAD" onclick="alert('Harap Tunggu Tanggal 11');" style="font size="5"></a><><><><a href="https://api.whatsapp.com/send?phone=6281247374916&text=#Daftar%20Nama|Email"><input type="button" value="Predaftar" onclick="alert('Tuliskan Nama dan email mu');" style="font size="5"></a>
+<br><a href="https://www.mediafire.com/file/bqfdn99g41iwg3t/update+29.apk/file"><input type="button" value="DOWNLOAD" onclick="alert('Harap Tunggu Tanggal 11');" style="font size="5"></a><><><><a href="https://api.whatsapp.com/send?phone=6281247374916&text=#Daftar%20Nama|Email"><input type="button" value="Predaftar" onclick="alert('Tuliskan Nama dan email mu');" style="font size="5"></a>
 <br><br><br><hr color="red">
 <font size="4"><font color="white" face="courier new">("Thanks to:")</font>
 <marquee><font size="3"><font color="white" face="courier new">FarhanJs</marquee>
@@ -160,7 +160,7 @@ position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
 ;(function(){
 
 
-var msg = " 🐱 Web by Ririt DB";
+var msg = " Web by Ririt DB";
 
 var size = 15;
 
