--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Ready Download</title>
   <meta charset="utf-8">
 <!--
-APP BY MC 113 | REMAKE FARHANJS
+APP BY MC 113 | REMAKE FARHANJS |
 -->
 <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width">
